# kalshi-statistical-tradingbot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: test_connections.py
src/kalshi_bot/: __init__.py  __main__.py  config.py  main.py
src/kalshi_bot/analytics/: __init__.py  weather_probability.py
src/kalshi_bot/domain/: __init__.py  events.py  market.py  models.py
src/kalshi_bot/engine/: __init__.py  bus.py  runner.py  signal_selection.py
src/kalshi_bot/exchange/: __init__.py  kalshi_auth.py  kalshi_rest.py  live_ws.py  market_discovery.py  mock_ws.py  order_executor.py  orders.py
src/kalshi_bot/feeds/: __init__.py  event_dates.py  multi_nws.py  nws.py  open_meteo.py  weather.py  weather_locations.py
src/kalshi_bot/risk/: __init__.py  kelly.py  sizing.py
src/kalshi_bot/strategies/: __init__.py  base.py  weather_imbalance.py
tests/: test_config.py  test_event_dates.py  test_integration.py  test_kelly.py  test_live_ws_parser.py  test_market_discovery.py  test_mock_ws.py  test_nws_feeder.py  test_nws_forecast_day.py  test_orders.py  test_sizing.py  test_strategy.py  test_weather_feeder.py  test_weather_locations.py  test_weather_probability.py
