[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalshi-weather-bot"
version = "0.1.0"
description = "Async event-driven trading bot framework for Kalshi weather contracts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "scipy>=1.11",
    "websockets>=12.0",
    "cryptography>=42.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
kalshi-bot = "kalshi_bot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_bot"]

[tool.hatch.build.targets.wheel.force-include]
"src/kalshi_bot" = "kalshi_bot"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
